@@ -1,5 +1,7 @@
 Release history for Module-Metadata
 
+  - new is_indexable() object method (ether, RT#84357)
+
 1.000019   2013-10-06
   - warnings now disabled inside during the evaluation of generated version
     sub (BinGOs, RT#89282)
